kubernetes/deployment.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  tls:
    - secretName: backend-secret-tls
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: backend-service
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/pxlblue/backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1G"
              cpu: "250m"
            limits:
              memory: "2G"
              cpu: "500m"
          ports:
            - containerPort: 3000
      terminationGracePeriodSeconds: 60
